--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -18,7 +18,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --black: #222;
-  --brand: #505cfd;
+  --brand: #2c3e50;
   --new-gray: #d8d8d8;
   --new-white: #fff;
   --primary: #007bff;
@@ -193,7 +193,7 @@ sup {
 }
 
 a {
-  color: #505cfd;
+  color: #2c3e50;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
@@ -2925,8 +2925,8 @@ fieldset:disabled a.btn {
 
 .btn-brand {
   color: #fff;
-  background-color: #505cfd;
-  border-color: #505cfd;
+  background-color: #2c3e50;
+  border-color: #2c3e50;
 }
 
 .btn-brand:hover {
@@ -2942,8 +2942,8 @@ fieldset:disabled a.btn {
 
 .btn-brand.disabled,
 .btn-brand:disabled {
-  background-color: #505cfd;
-  border-color: #505cfd;
+  background-color: #2c3e50;
+  border-color: #2c3e50;
 }
 
 .btn-brand:not([disabled]):not(.disabled):active,
@@ -3314,16 +3314,16 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-brand {
-  color: #505cfd;
+  color: #2c3e50;
   background-color: transparent;
   background-image: none;
-  border-color: #505cfd;
+  border-color: #2c3e50;
 }
 
 .btn-outline-brand:hover {
   color: #fff;
-  background-color: #505cfd;
-  border-color: #505cfd;
+  background-color: #2c3e50;
+  border-color: #2c3e50;
 }
 
 .btn-outline-brand:focus,
@@ -3333,7 +3333,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-brand.disabled,
 .btn-outline-brand:disabled {
-  color: #505cfd;
+  color: #2c3e50;
   background-color: transparent;
 }
 
@@ -3341,8 +3341,8 @@ fieldset:disabled a.btn {
 .btn-outline-brand:not(:disabled):not(.disabled).active,
 .show > .btn-outline-brand.dropdown-toggle {
   color: #fff;
-  background-color: #505cfd;
-  border-color: #505cfd;
+  background-color: #2c3e50;
+  border-color: #2c3e50;
 }
 
 .btn-outline-brand:not(:disabled):not(.disabled):active:focus,
@@ -3733,7 +3733,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #505cfd;
+  color: #2c3e50;
   background-color: transparent;
 }
 
@@ -4590,7 +4590,7 @@ tbody.collapse.show {
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
   background-color: transparent;
-  border-color: #505cfd;
+  border-color: #2c3e50;
 }
 
 .nav-tabs .dropdown-menu {
@@ -5523,8 +5523,8 @@ tbody.collapse.show {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #505cfd;
-  border-color: #505cfd;
+  background-color: #2c3e50;
+  border-color: #2c3e50;
 }
 
 .page-item.disabled .page-link {
@@ -5608,7 +5608,7 @@ tbody.collapse.show {
 
 .badge-brand {
   color: #fff;
-  background-color: #505cfd;
+  background-color: #2c3e50;
 }
 
 .badge-brand[href]:hover,
@@ -7074,7 +7074,7 @@ button.bg-black:focus {
 }
 
 .bg-brand {
-  background-color: #505cfd !important;
+  background-color: #2c3e50 !important;
 }
 
 a.bg-brand:hover,
@@ -7247,7 +7247,7 @@ button.bg-dark:focus {
 }
 
 .border-brand {
-  border-color: #505cfd !important;
+  border-color: #2c3e50 !important;
 }
 
 .border-new-gray {
@@ -10329,7 +10329,7 @@ a.text-black:focus {
 }
 
 .text-brand {
-  color: #505cfd !important;
+  color: #2c3e50 !important;
 }
 
 a.text-brand:hover,
@@ -10580,18 +10580,18 @@ a.text-dark:focus {
 
 .owl-carousel .owl-dots .owl-dot > span {
   border-radius: 100%;
-  background: #505cfd;
+  background: #2c3e50;
   display: block;
   height: 4px;
   width: 4px;
 }
 
 .owl-carousel .owl-dots .owl-dot.active {
-  border-color: #505cfd;
+  border-color: #2c3e50;
 }
 
 .owl-carousel .owl-dots .owl-dot:hover {
-  border-color: #505cfd;
+  border-color: #2c3e50;
   opacity: .5;
 }
 
@@ -10842,7 +10842,7 @@ h5 > a:hover,
 h5 > a:focus,
 h6 > a:hover,
 h6 > a:focus {
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 h1,
@@ -10950,7 +10950,7 @@ pre[class*=language-] {
 
 .info-list a:hover,
 .info-list a:focus {
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 .arrow-list {
@@ -11200,13 +11200,13 @@ pre[class*=language-] {
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  border-color: #505cfd;
+  border-color: #2c3e50;
   border-bottom-width: 2px;
 }
 
 .nav-tabs-icons .nav-link > span {
   display: block;
-  color: #505cfd;
+  color: #2c3e50;
   font-size: 2.625rem;
   margin: 0 0 20px;
 }
@@ -11320,7 +11320,7 @@ img.img-shadow,
 .icon-box .icon-box-icon {
   font-size: 2.375rem;
   margin: 0 0 10px;
-  color: #505cfd;
+  color: #2c3e50;
   transition: all .3s ease-in-out;
 }
 
@@ -11487,7 +11487,7 @@ img.img-shadow,
 }
 
 .accordion-brand .accordion-item-header {
-  background: #505cfd;
+  background: #2c3e50;
 }
 
 .accordion-brand .accordion-item-header h6 a {
@@ -11929,7 +11929,7 @@ img.img-shadow,
 
 .counter .counter-icon {
   font-size: 2.125rem;
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 .counter .counter-number h6 {
@@ -12118,7 +12118,7 @@ img.img-shadow,
 
 .social-icons > li > a:hover,
 .social-icons > li > a:focus {
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 .social-icons.text-center > li {
@@ -12160,7 +12160,7 @@ img.img-shadow,
 .double-bounce1,
 .double-bounce2 {
   position: absolute;
-  background-color: #505cfd;
+  background-color: #2c3e50;
   border-radius: 50%;
   opacity: .5;
   height: 100%;
@@ -12358,7 +12358,7 @@ img.img-shadow,
 
 .top-bar-cart > span > span {
   position: absolute;
-  background: #505cfd;
+  background: #2c3e50;
   border-radius: 100%;
   height: 15px;
   width: 15px;
@@ -12869,8 +12869,8 @@ img.img-shadow,
 }
 
 .overlay-background.overlay-gradient {
-  background: #505cfd;
-  background: linear-gradient(to left, #00dbde, #505cfd);
+  background: #2c3e50;
+  background: linear-gradient(to left, #bdc3c7, #2c3e50);
 }
 
 .divider-top {
@@ -12910,7 +12910,7 @@ img.img-shadow,
 }
 
 .module-page-title .breadcrumb .breadcrumb-item > a:hover {
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 @media (max-width: 991.98px) {
@@ -13421,7 +13421,7 @@ img.img-shadow,
 }
 
 .post-content blockquote:hover {
-  border-color: #505cfd;
+  border-color: #2c3e50;
 }
 
 .post-content ul,
@@ -13547,7 +13547,7 @@ img.img-shadow,
 }
 
 .shop-single-item-rating a:hover {
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 .cart-table {
@@ -13662,7 +13662,7 @@ img.img-shadow,
 .comment-meta-author a:focus,
 .comment-meta-author-shop a:hover,
 .comment-meta-author-shop a:focus {
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 .comment-meta-date,
@@ -13680,7 +13680,7 @@ img.img-shadow,
 .comment-meta-date a:focus,
 .comment-meta-date-shop a:hover,
 .comment-meta-date-shop a:focus {
-  color: #505cfd;
+  color: #2c3e50;
   opacity: 1;
 }
 
@@ -13705,7 +13705,7 @@ img.img-shadow,
 .comment-reply > a:focus,
 .comment-reply-shop > a:hover,
 .comment-reply-shop > a:focus {
-  background: #505cfd;
+  background: #2c3e50;
   color: #fff;
 }
 
@@ -13740,7 +13740,7 @@ img.img-shadow,
 
 .widget a:hover,
 .widget a:focus {
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 .widget ul {
@@ -13779,7 +13779,7 @@ img.img-shadow,
 }
 
 .widget-search .search-button:hover {
-  color: #505cfd;
+  color: #2c3e50;
 }
 
 .widget-categories ul li,
@@ -13861,7 +13861,7 @@ img.img-shadow,
 
 .tag-cloud > a:hover,
 .post-tags > a:hover {
-  background: #505cfd;
+  background: #2c3e50;
   color: #fff;
   opacity: 1;
 }
@@ -14201,5 +14201,5 @@ body.off-canvas-sidebar-open:after {
 }
 
 .nav-sidebar a:hover {
-  color: #505cfd;
+  color: #2c3e50;
 }
